--- a/Fanpage/master.css
+++ b/Fanpage/master.css
@@ -1,16 +1,18 @@
 background {
-  background-repeat: repeat;
-  background-size: 100px;
+  background: url(rbackg.jpg)
+
+
+}
 }
 header{
-  width: 600px;
+  width: 490px;
   height: 100px;
   background: #000000;
   margin: auto;
   position: relative;
 }
 h1 {
-color: red;
+color: black;
 text-align: center;
  letter-spacing: 3px;
  font-size: 80px;
@@ -26,11 +28,11 @@ text-decoration: none;}
 
 div{
   background: #000000;
-  width: 600px;
-  height: 600px;
+  width: 400px;
+  height: 420px;
   margin: auto;
   position: relative;
-  font-family: 'Cormorant', serif;
+font-family: 'PT Sans', sans-serif;
   color: red;
 }
 h2{
