--- a/Fanpage/albums.css
+++ b/Fanpage/albums.css
@@ -1,3 +1,15 @@
 body {
   font-family: 'Quicksand', sans-serif;
 }
+p{
+  text-align: center;
+}
+h2{
+  text-align: center;
+}
+img{
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 22%;
+}
