--- a/main.css
+++ b/main.css
@@ -7,12 +7,33 @@ body {
 }
 .head{
   font-size: 70px;
-  color: black
-font-family: viktor-script;
-font-style: sans-serif;
-font-weight: 400;
-font-style: normal;
+  color: black;
+  font-family: grafolita-script, sans-serif;
+  font-weight: 600;
+  font-style: normal;
 }
-div {
+title{
+}
+div{
   font-size: 55px;
+}
+a:visited
+{
+color:inherit;
+text-decoration: none;
+}
+a {
+  text-decoration: none;
+}
+.one{
+  color: blue;
+}
+.two{
+  color: blue;
+}
+.three{
+  color: blue;
+}
+.four{
+  color: blue;
 }
